--- a/app/Frontend/frontend/src/index.css
+++ b/app/Frontend/frontend/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  input {
+      @apply w-full px-3 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-1 focus:ring-blue-500;
+  }
+  .sbmt {
+      @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none w-full focus:ring-2 focus:ring-offset-2 focus:ring-blue-700
+  }
+  .lgt-btn{
+      @apply bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700
+  }
+}
