--- a/app/Frontend/frontend/src/index.css
+++ b/app/Frontend/frontend/src/index.css
@@ -12,4 +12,7 @@
   .lgt-btn{
       @apply bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700
   }
+  .confirm-btn{
+    @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700
+  }
 }
